<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PonthatarActivity" >

    <TextView
        android:id="@+id/maxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_pont" />

    <EditText
        android:id="@+id/maximumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/maxTextView"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/maxTextView"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maxTextView"
        android:layout_alignRight="@+id/maximumText"
        android:layout_below="@+id/maximumText" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/jegyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/jegy" />

            <TextView
                android:id="@+id/minPercentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:textStyle="bold"                
                android:text="@string/min_percent" />

            <TextView
                android:id="@+id/maxPercentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/max_percent" />

            <TextView
                android:id="@+id/minValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/min_value" />

            <TextView
                android:id="@+id/maxValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/max_value" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/t5" />

	    <EditText
	        android:id="@+id/min5pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/max5pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/min5vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
	    
	    <EditText
	        android:id="@+id/max5vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
	    	    	    
	    </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/t4" />

	    <EditText
	        android:id="@+id/min4pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/max4pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/min4vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
	    
	    <EditText
	        android:id="@+id/max4vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/t3" />

   	    <EditText
	        android:id="@+id/min3pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/max3pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/min3vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
	    
	    <EditText
	        android:id="@+id/max3vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/t2" />

   	    <EditText
	        android:id="@+id/min2pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/max2pText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal" />	
	    
	    <EditText
	        android:id="@+id/min2vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
	    
	    <EditText
	        android:id="@+id/max2vText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number" />	
            
        </TableRow>

    </TableLayout>

</RelativeLayout>